# TurtleGraphics

./: .gitignore  CMakeLists.txt  Commands.turtle  Commands.txt  Display.hpp  LICENSE  Main.cpp  Position.hpp  Readme.md  Turtle-1.sln  Turtle-1.sln.DotSettings  Turtle-1.vcxproj  Turtle-1.vcxproj.filters  Turtle.cpp  Turtle.hpp  pre-commit.sh  run_tests.sh  run_tests_cmake.sh  test
.github/workflows/: cmake.yml
Include/: Color.hpp  Command.hpp  Config.hpp  Display.hpp  Math.hpp  Pch.hpp  Position.hpp  StdAliases.hpp  Turtle.hpp  catch.hpp
Include/Processor/: AstNode.hpp  Command.hpp  CommandSequence.cpp  CommandSequence.hpp  Continuation.hpp  ECommandType.hpp  EToken.hpp  Executor.hpp  Lexer.hpp  Parser.hpp  Pch.hpp  ProcessBase.hpp  ProcessorPch.hpp  RunContext.hpp  StringSplice.hpp  Template.hpp  Token.hpp  Translator.hpp
Source/: Display.cpp  EToken.cpp  Main.cpp  Pch.cpp  TestMain.cpp  Turtle.cpp
Source/Processor/: AstNode.cpp  CommandSequence.cpp  Continuation.cpp  Executor.cpp  Lexer.cpp  Parser.cpp  ProcessBase.cpp  ProcessorPch.cpp  RunContext.cpp  Template.cpp  Translator.cpp
Source/Tests/: TestExecutor.cpp  TestMain.cpp
Source/Turtle/: Display.cpp  Pch.cpp  Turtle.cpp
Tests/: TestCases.cpp  TestLexer.cpp  Tests.vcxproj  Tests.vcxproj.filters
